--- a/literacy/brokers.html
+++ b/literacy/brokers.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="На что смотреть и на что не смотреть при выборе брокера. Основные виды комиссий брокеров. Сравнение комиссий  брокеров." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-12-16" />
-        <meta property="og:article:modified_time" content="2019-12-29" />
+        <meta property="og:article:modified_time" content="2020-02-10" />
 <meta property="og:title" content="Как выбрать брокера" />
 <meta property="og:url" content="https://onfin.github.io/literacy/brokers" />
 
@@ -57,7 +57,7 @@
             <h1>Как выбрать брокера</h1>
             <div class="meta">
                     <p class="description">На что смотреть и на что не смотреть при выборе брокера. Основные виды комиссий брокеров. Сравнение комиссий  брокеров.</p>
-                    <p> Обновлено: <time>2019-12-29</time> </p>
+                    <p> Обновлено: <time>2020-02-10</time> </p>
 
             </div>
         </header>
@@ -79,9 +79,10 @@
 <li><a href="#_8">Промсвязьбанк</a></li>
 <li><a href="#_9">Уралсиб</a></li>
 <li><a href="#-_3">Эволюция-регион</a></li>
+<li><a href="#_10">БКС</a></li>
 </ul>
 </li>
-<li><a href="#_10">Где почитать/спросить о брокерах</a></li>
+<li><a href="#_11">Где почитать/спросить о брокерах</a></li>
 </ul>
 </div>
 <h2 id="_1">Россия — не Америка</h2>
@@ -154,7 +155,7 @@
 </tr>
 <tr>
 <td>Накопительный счёт</td>
-<td>от 30Кр, от 3мес, 3,4%г</td>
+<td>от 30Кр, от 3мес, 3%г</td>
 </tr>
 <tr>
 <td>Открытие счёта</td>
@@ -233,7 +234,7 @@
 </tr>
 <tr>
 <td>Ежемесячная</td>
-<td>при наличии сделок <br> 99р / 290р</td>
+<td>при наличии сделок <br> 0 / 290р</td>
 </tr>
 <tr>
 <td>За хранение</td>
@@ -249,7 +250,7 @@
 </tr>
 <tr>
 <td>Накопительный счёт</td>
-<td>5%г</td>
+<td>4%г</td>
 </tr>
 <tr>
 <td>Открытие счёта</td>
@@ -297,7 +298,7 @@
 </tr>
 <tr>
 <td>Накопительный счёт</td>
-<td>4,5%г на мин. остаток</td>
+<td>4,25%г на мин. остаток</td>
 </tr>
 <tr>
 <td>Открытие счёта</td>
@@ -344,7 +345,7 @@
 </tr>
 <tr>
 <td>Накопительный счёт</td>
-<td>Брокер независимый, вывод в любой банк — 10р</td>
+<td>-</td>
 </tr>
 <tr>
 <td>Открытие счёта</td>
@@ -391,7 +392,7 @@
 </tr>
 <tr>
 <td>Накопительный счёт</td>
-<td>5%г</td>
+<td>4%г</td>
 </tr>
 <tr>
 <td>Открытие счёта</td>
@@ -487,7 +488,7 @@
 </tr>
 <tr>
 <td>Накопительный счёт</td>
-<td>РЕПО свободного остатка &gt; 2Кр под ≈ ключевую ставку –0,74%г</td>
+<td>РЕПО свободного остатка &gt; 2Кр под ≈ ключевую ставку –1%г</td>
 </tr>
 <tr>
 <td>Открытие счёта</td>
@@ -501,7 +502,55 @@
 </table>
 <p>Нет ЛК, только мобильное приложение (удобное). Независимый брокер при крупной инвестиционной группе.</p>
 </div>
-<h2 id="_10">Где почитать/спросить о брокерах</h2>
+<h3 id="_10">БКС</h3>
+<p>Крайне нерекомендуемый вариант, включил только из-за популярности. Высокие и очень запутанные тарифы, склонность разводить неопытных инвесторов на структурные продукты и торговые рекомендации, множество негативных отзывов на введение в заблуждение и проблемы с обслуживанием.</p>
+<table>
+<thead>
+<tr>
+<th><div style="width:10em"></div></th>
+<th></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Тариф</td>
+<td>Инвестор / Трейдер</td>
+</tr>
+<tr>
+<td>Комиссия с оборота</td>
+<td>0,3% / 0,05%</td>
+</tr>
+<tr>
+<td>Ежемесячная</td>
+<td>при наличии сделок 99р / 199р <br> min 200р при стоимости активов &lt;100Кр</td>
+</tr>
+<tr>
+<td>За хранение</td>
+<td>0</td>
+</tr>
+<tr>
+<td>Получение дивидендов на банк. счёт</td>
+<td>+</td>
+</tr>
+<tr>
+<td>... с ИИС</td>
+<td>+</td>
+</tr>
+<tr>
+<td>Накопительный счёт</td>
+<td>от 10Кр, 4%г</td>
+</tr>
+<tr>
+<td>Открытие счёта</td>
+<td>На сайте с передачей скана паспорта</td>
+</tr>
+<tr>
+<td>Вывод денег</td>
+<td>Бесплатно в БКС-Банк, далее согласно пакету услуг</td>
+</tr>
+</tbody>
+</table>
+<h2 id="_11">Где почитать/спросить о брокерах</h2>
 <p><a href="https://www.banki.ru/forum/?PAGE_NAME=list&amp;FID=21">На форуме склянок</a></p>
         </div>
         <aside>
