bonds_in_portfolio

--- a/calculators/bond_price.html
+++ b/calculators/bond_price.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Калькулятор стоимости облигации: как изменяется стоимость при приближении даты погашения и изменении процентных ставок на рынке" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-02-10" />
-        <meta property="og:article:modified_time" content="2020-02-10" />
+        <meta property="og:article:modified_time" content="2020-02-12" />
 <meta property="og:title" content="Стоимость облигаций" />
 <meta property="og:url" content="https://onfin.github.io/calculators/bond_price" />
 
@@ -57,13 +57,14 @@
             <h1>Стоимость облигаций</h1>
             <div class="meta">
                     <p class="description">Калькулятор стоимости облигации: как изменяется стоимость при приближении даты погашения и изменении процентных ставок на рынке</p>
-                    <p> Обновлено: <time>2020-02-10</time> </p>
+                    <p> Обновлено: <time>2020-02-12</time> </p>
 
             </div>
         </header>
 
         <div class="content">
             <p>Рыночная ставка даётся без учёта капитализации (реинвестирования). Для заданного срока погашения можно посмотреть её на <a href="https://www.moex.com/ru/marketdata/indices/state/g-curve/">кривой бескупонной доходности</a>.</p>
+<p>Если облигация дисконтная (бескупонная), то в качестве ставки купона нужно указывать её текущую доходность к погашению.</p>
 <script type="text/javascript" src="/js/preact.umd.js"></script>
 
 <script type="text/javascript" src="/js/hooks.umd.js"></script>
