--- a/notes/index.html
+++ b/notes/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Краткие заметки в систематическом порядке" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-16" />
-        <meta property="og:article:modified_time" content="2020-02-01" />
+        <meta property="og:article:modified_time" content="2020-02-12" />
 <meta property="og:title" content="Заметки о финансах" />
 <meta property="og:url" content="https://onfin.github.io/notes" />
 
@@ -74,6 +74,7 @@
 <li><a href="/notes/diversification_math">Математика диверсификации: портфельный эффект и ребалансировка между акциями</a></li>
 <li><a href="/notes/diversification_math2">Математика диверсификации-2: доходность и риск</a></li>
 <li><a href="/notes/inflation">Инфляция</a></li>
+<li><a href="/notes/bonds_in_portfolio">Облигации в инвестиционном портфеле</a></li>
 </ol>
 <h2 id="_3">Экономические этюды</h2>
 <ol>
