--- a/notes/lifeprofile.html
+++ b/notes/lifeprofile.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Как будут изменяться в течение жизни доходы, расходы и капитал если делать сбережения и если их не делать." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-11-21" />
-        <meta property="og:article:modified_time" content="2020-02-13" />
+        <meta property="og:article:modified_time" content="2020-02-18" />
 <meta property="og:title" content="Финансовый профиль жизни обычного человека и инвестора" />
 <meta property="og:url" content="https://onfin.github.io/notes/lifeprofile" />
 
@@ -57,7 +57,7 @@
             <h1>Финансовый профиль жизни обычного человека и инвестора</h1>
             <div class="meta">
                     <p class="description">Как будут изменяться в течение жизни доходы, расходы и капитал если делать сбережения и если их не делать.</p>
-                    <p> Обновлено: <time>2020-02-13</time> </p>
+                    <p> Обновлено: <time>2020-02-18</time> </p>
 
             </div>
         </header>
@@ -69,7 +69,7 @@
 
 <script type="text/javascript" src="/js/forms.js"></script>
 
-<script type="text/javascript" src="https://www.chartjs.org/dist/2.9.3/Chart.min.js"></script>
+<script type="text/javascript" src="/js/Chart.min.js"></script>
 
 <div id="lifeProfile" class="calc-form"></div>
 
