--- a/calculators/compounding.html
+++ b/calculators/compounding.html
@@ -54,7 +54,7 @@
             <h1>Сложный процент</h1>
             <div class="meta">
                     <p class="description">Калькуляторы сложного процента и сроков достижения финансовой независимости</p>
-                    <p> Обновлено: <time>2020-02-13</time> </p>
+                    <p> Обновлено: <time>2020-02-18</time> </p>
 
             </div>
         </header>
@@ -66,7 +66,7 @@
 
 <script type="text/javascript" src="/js/forms.js"></script>
 
-<script type="text/javascript" src="https://www.chartjs.org/dist/2.9.3/Chart.min.js"></script>
+<script type="text/javascript" src="/js/Chart.min.js"></script>
 
 <h2 id="_1">Эффективная годовая ставка</h2>
 <div id="effectiveRate"  class="calc-form"></div>
