--- a/calculators/credits.html
+++ b/calculators/credits.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Калькуляторы для расчёта, сравнения и выбра различных схем выплаты кредитов. Насколько выгоднее или невыгоднее взять кредит и вложить по сравнению с постепенным накоплением." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-13" />
-        <meta property="og:article:modified_time" content="2019-10-14" />
+        <meta property="og:article:modified_time" content="2020-02-18" />
 <meta property="og:title" content="Калькуляторы кредитов" />
 <meta property="og:url" content="https://onfin.github.io/calculators/credits" />
 
@@ -57,7 +57,7 @@
             <h1>Калькуляторы кредитов</h1>
             <div class="meta">
                     <p class="description">Калькуляторы для расчёта, сравнения и выбра различных схем выплаты кредитов. Насколько выгоднее или невыгоднее взять кредит и вложить по сравнению с постепенным накоплением.</p>
-                    <p> Обновлено: <time>2019-10-14</time> </p>
+                    <p> Обновлено: <time>2020-02-18</time> </p>
 
             </div>
         </header>
@@ -67,7 +67,7 @@
 
 <script type="text/javascript" src="/js/nunjucks.min.js"></script>
 
-<script defer src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
+<script defer src="/js/lodash.min.js"></script>
 
 <form class="calc-form" id="credit">
 <table>
