--- a/literacy/iis.html
+++ b/literacy/iis.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Какие налоговые льготы и вычеты полагаются инвестору на российском фондовом рынке. Что такое ИИС, каковы особенности его использования, как получить вычет по ИИС." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-11-10" />
-        <meta property="og:article:modified_time" content="2019-12-29" />
+        <meta property="og:article:modified_time" content="2020-04-02" />
 <meta property="og:title" content="Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов" />
 <meta property="og:url" content="https://onfin.github.io/literacy/iis" />
 
@@ -57,7 +57,7 @@
             <h1>Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов</h1>
             <div class="meta">
                     <p class="description">Какие налоговые льготы и вычеты полагаются инвестору на российском фондовом рынке. Что такое ИИС, каковы особенности его использования, как получить вычет по ИИС.</p>
-                    <p> Обновлено: <time>2019-12-29</time> </p>
+                    <p> Обновлено: <time>2020-04-02</time> </p>
 
             </div>
         </header>
@@ -158,8 +158,8 @@
 <p>Действовать аналогично предыдущему пункту, только вместо заполнения графы убытков предыдущих лет вы будете заполнять страницы доходов про брокерским счетам, указывая при соответствующем коде дохода размер вычета (расходов) больше размера дохода. К сожалению, форма 2-НДФЛ в этом месте не совпадает с формой декларации, и придётся посидеть с калькулятором и листом расчёта НДФЛ от брокера, чтобы всё корректно перенести в декларацию.</p>
 <h2 id="_8">Льготы по облигациям</h2>
 <ol>
-<li>Не облагается налогом купон по ОФЗ и муниципальным облигациям (в т.ч. валютным).</li>
-<li>Не облагается купон по рублёвым корпоративным облигациям, выпущенным с 1 января 2017г по 31 декабря 2020г (<a href="https://www.moex.com/ru/markets/stock/privilegeindividuals.aspx">список</a>), если суммарный купон за год меньше &lt;номинальная стоимость облигации&gt;×&lt;ключевая ставка ЦБ + 5%&gt;. Превышение облагается налогом в 35%.</li>
+<li>Не облагается налогом купон по ОФЗ и муниципальным облигациям (в т.ч. валютным). <strong>С 1 января 2021г льгота отменена и будет НДФЛ 13%.</strong></li>
+<li>Не облагается купон по рублёвым корпоративным облигациям, выпущенным с 1 января 2017г по 31 декабря 2020г (<a href="https://www.moex.com/ru/markets/stock/privilegeindividuals.aspx">список</a>), если суммарный купон за год меньше (номинальная стоимость облигации) × (ключевая ставка ЦБ + 5%). Превышение облагается налогом в 35%. <strong>С 1 января 2021г на все купоны будет НДФЛ 13% в общем порядке.</strong></li>
 <li>Не облагается налогом курсовая переоценка стоимости облигаций Минфина в валюте. Пусть вы купили облигацию по цене номинала в 1000$ при курсе 1$=60р, а в день погашения курс был 1$=70р. Если это была облигация Минфина, то налог вы не заплатите. Для других облигаций он будет (70×1000-60×1000)×13%=1300р.</li>
 </ol>
         </div>
