--- a/literacy/taxes.html
+++ b/literacy/taxes.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Как рассчитываются и уплачиваются налоги по операциям на брокерском счёте. В каких случаях нужно рассчитывать налог самостоятельно. Когда нужно подавать декларацию и платить налог." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-11-08" />
-        <meta property="og:article:modified_time" content="2019-12-29" />
+        <meta property="og:article:modified_time" content="2020-04-02" />
 <meta property="og:title" content="Брокерский счёт: как рассчитываются и уплачиваются налоги" />
 <meta property="og:url" content="https://onfin.github.io/literacy/taxes" />
 
@@ -57,7 +57,7 @@
             <h1>Брокерский счёт: как рассчитываются и уплачиваются налоги</h1>
             <div class="meta">
                     <p class="description">Как рассчитываются и уплачиваются налоги по операциям на брокерском счёте. В каких случаях нужно рассчитывать налог самостоятельно. Когда нужно подавать декларацию и платить налог.</p>
-                    <p> Обновлено: <time>2019-12-29</time> </p>
+                    <p> Обновлено: <time>2020-04-02</time> </p>
 
             </div>
         </header>
@@ -69,6 +69,7 @@
 <ul>
 <li><a href="#_1">В каких случаях нужно самостоятельно рассчитывать налог и подавать декларацию</a></li>
 <li><a href="#_2">В каких случаях можно подать декларацию, чтобы уменьшить налог</a></li>
+<li><a href="#1-2021">Как будут рассчитываться налоги на депозиты с 1 января 2021г</a></li>
 <li><a href="#_3">Как рассчитываются налоги от операций на брокерском счёте</a><ul>
 <li><a href="#_4">Покупка, продажа и погашение ценных бумаг</a></li>
 <li><a href="#_5">Выплата купонов по облигациям</a></li>
@@ -85,18 +86,25 @@
 <h2 id="_1">В каких случаях нужно самостоятельно рассчитывать налог и подавать декларацию</h2>
 <ol>
 <li>Вы получили купоны или дивиденды в валюте, а брокер с них не удержал налог. Нужно подать декларацию с этими дивидендами, пересчитанными в рубли по курсу ЦБ на день выплаты. Если в брокерском отчёте указано, когда и сколько налога было удержано в иностранном государстве, то на эту сумму (так же пересчитанную в рубли) можно налог уменьшить (отдельное поле в декларации). Если удержано больше 13%, то в России вы налог платить не должны и в декларации такой дивиденд можно не указывать. <a href="https://help.tezis.io/hc/ru/articles/360000086833-%D0%92%D0%B8%D0%B4%D1%8B-%D0%B8%D0%BD%D1%81%D1%82%D1%80%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D0%BE%D0%B2-%D0%BF%D0%BE-%D0%BA%D0%BE%D1%82%D0%BE%D1%80%D1%8B%D0%BC-%D0%B2%D1%8B-%D1%81%D0%B0%D0%BC%D0%BE%D1%81%D1%82%D0%BE%D1%8F%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%BE-%D0%B4%D0%BE%D0%BB%D0%B6%D0%BD%D1%8B-%D1%83%D0%BF%D0%BB%D0%B0%D1%82%D0%B8%D1%82%D1%8C-%D0%BD%D0%B0%D0%BB%D0%BE%D0%B3">Список бумаг на Московской бирже, с которых нужно самостоятельно рассчитывать и уплачивать налог.</a></li>
-<li>Вы работаете с иностранным брокером. Нужно будет самостоятельно рассчитать налоги (по правилам, расписаным ниже) и заполнить налоговую декларацию, приложив к ней отчёт брокера (на русском) и свои расчёты. Interactive Brokers позволяет скачать отчёт на русском, если у вас только на английском отчёт, то можно перевести самостоятельно, нотариального перевода обычно не требуют. Печати не нужны (они даже для российских организаций уже не обязательны).</li>
+<li>Вы работаете с иностранным брокером. Нужно будет самостоятельно рассчитать налоги (по правилам, расписанным ниже) и заполнить налоговую декларацию, приложив к ней отчёт брокера (на русском) и свои расчёты. Interactive Brokers позволяет скачать отчёт на русском, если у вас только на английском отчёт, то можно перевести самостоятельно, нотариального перевода обычно не требуют. Печати не нужны (они даже для российских организаций уже не обязательны).</li>
 <li>Вы получили прибыль от операций на валютном рынке. Нюанс в том, что как её правильно рассчитывать, если вы не банальный спекулянт, не знает вообще никто. Материальной выгодой считается покупка/продажа валюты за рубли по более выгодному курсу, чем ЦБ РФ на этот день. Обычно рекомендуют декларировать и уплачивать налог с неё.</li>
 <li>Декларацию надо подать до 30 апреля, а рассчитанные налоги заплатить до 15 июля.</li>
 </ol>
 <h2 id="_2">В каких случаях можно подать декларацию, чтобы уменьшить налог</h2>
 <ol>
 <li>У вас в предыдущие годы был убыток, и вы хотите его зачесть в этом году. Если вы получили убыток по брокерскому счёту по итогам года, сразу запросите у брокера справку об убытках. В следующие 10 лет сможете уменьшать налооблагаемый доход по счёту на размер этого убытка. В декларации есть отдельная страница для записей убытков прошлых лет. К декларации нужно будет приложить справки об убытках.</li>
-<li>Вы работаете с несколькими брокерами, и хотите зачесть (сальдировать) прибыль у одного брокера с убытком у другого. Берёте у «убыточного» справку об убытках, у «прибыльного» — 2-НДФЛ. Переносите доходы и расходы по обоим брокерам в декларацию. Непогашенный убыток можно перенести на следующие годы. Если «убыточный» брокер — иностранный, то вместо справки об убытках у вас будет брокерский отчёт и ваши расчёты. ВНИМАНИЕ! Убытки по ИИС любого типа рассчитываются только в момент его закрытия.</li>
+<li>Вы работаете с несколькими брокерами, и хотите зачесть (сальдировать) прибыль у одного брокера с убытком у другого. Берёте у «убыточного» справку об убытках, у «прибыльного» — 2-НДФЛ. Переносите доходы и расходы по обоим брокерам в декларацию. Непогашенный убыток можно перенести на следующие годы. Если «убыточный» брокер — иностранный, то вместо справки об убытках у вас будет брокерский отчёт и ваши расчёты. ВНИМАНИЕ! Убытки по ИИС любого типа рассчитываются только в момент его закрытия, совокупно за всё время его существования.</li>
 <li>Вы по какой-то причине не подали брокеру заявление об освобождении от налога прибыли от продажи ценных бумаг, бывших в собственности больше трёх лет. Её можно рассчитать самостоятельно (по правилам ниже + <a href="http://ivo.garant.ru/#/document/10900200/entry/2191112:0">п. 2 ст. 219.1 НК РФ</a>) и вписать в декларацию, приложив подтверждающие документы и расчёт. Но лучше не зевать и проводить этот вычет через брокера. Не работает для ИИС.</li>
 <li>Вы внесли деньги на ИИС и хотите получить за них вычет.</li>
 <li>Декларацию можно подать когда угодно, хоть через несколько лет, но лучше как можно раньше: деньги у нас со временем обесцениваются.</li>
 <li>У налоговой будет 3 месяца на проверку и подтверждение вычетов, потом ещё 1 месяц на возврат переплаты (если она есть).</li>
+</ol>
+<h2 id="1-2021">Как будут рассчитываться налоги на депозиты с 1 января 2021г</h2>
+<ol>
+<li>Банки будут сообщать в налоговую сумму начисленных процентов по итогам года (т.е. начиная с 2022 по итогам 21-го) по всем вкладам и счетам со ставкой выше 1%г.</li>
+<li>Налоговая из этой суммы вычтет 1Мр × (ключевую ставку ЦБ на 1 января предыдущего года).</li>
+<li>На оставшуюся сумму будет начислено 13%.</li>
+<li>Налоговая пришлёт уведомление о налоге со сроком уплаты до 1 декабря.</li>
 </ol>
 <h2 id="_3">Как рассчитываются налоги от операций на брокерском счёте</h2>
 <h3 id="_4">Покупка, продажа и погашение ценных бумаг</h3>
@@ -104,17 +112,17 @@
 <li>Стоимость продажи/погашения минус стоимость покупки минус комиссии за сделки. Пока вы не продали бумагу — никакой прибыли/убытка по ней не возникает.</li>
 <li>ФИФО. Если вы одну и ту же бумагу покупали в несколько сделок по разной стоимости, то прибыль/убыток будет рассчитываться начиная с более ранних сделок. Т.е. положим вы сперва купили 1 акцию за 1000р, потом 2 того же предприятия за 2000р, потом продали 1 за 1300. Ваша прибыль 1300-1000=300р. Если вы продадите 2 за 1300, то прибыль будет считаться так (1300-1000) + (1300-2000) = -400р убыток.</li>
 <li>В рублях. Если вас угораздило купить ценную бумагу за 100$ при курсе ЦБ РФ на день покупки 1$=60р, а продать за 90$ при курсе 1$=70р, то у вас облагаемая налогом прибыль в размере 90×70 - 100×60 = 300р, а не убыток (90-100)×70=-700р, как вам могло показаться. Однако! Если этой ценной бумагой оказалась номинированная в долларах облигация Минфина РФ, то у вас таки убыток (90-100)×70=-700р.</li>
-<li>Индексация ОФЗ-ИН налогом не облагается. Но спекулятивный доход на ОФЗ-ИН — облагается. Внимательно: если на момент покупки номинал ОФЗ-ИН был 1000р и расходы на покупку составили 990р (цена бумаги + комиссия), а на момент продажи номинал 1100р и доход от продажи 1110 (цена бумаги - комиссия), то налогооблагаемый доход будет (1110-990)-(1100-1000) = 20р.</li>
-<li>Прирост НКД для ОФЗ и муниципальных облигаций налогом не облагаются.</li>
+<li>Индексация ОФЗ-ИН налогом не облагается. Но спекулятивный доход на ОФЗ-ИН — облагается. Внимательно: если на момент покупки номинал ОФЗ-ИН был 1000р и расходы на покупку составили 990р (цена бумаги + комиссия), а на момент продажи номинал 1100р и доход от продажи 1110 (цена бумаги - комиссия), то налогооблагаемый доход будет (1110-990)-(1100-1000) = 20р. <strong>С 1 января 2021г льгота отменена и будет НДФЛ 13%.</strong></li>
+<li>Прирост НКД для ОФЗ и муниципальных облигаций налогом не облагаются. <strong>С 1 января 2021г льгота отменена и будет НДФЛ 13%.</strong></li>
 <li>Прирост НКД облагается доходом для корпоративных облигаций, даже для тех, которые освобождены от НДФЛ на купонный доход. Т.е. если купить облигацию за 1000р + 50р НКД, получить купон в 100р и продать за ту же 1000р, то НДФЛ будет только с купонного дохода (если будет), а вот если выплаты купона не дожидаться и продать облигацию за 1000р + 99р НКД, то на 99-50=49р будет налог.</li>
 <li>При частичном погашении облигаций налог учитывается пропорционально. Т.е. если облигация номиналом 1000р была куплена за 900р, потом эмитент выплатил в счёт погашения 250р (25% номинала), то налог будет на 25%×(1000р-900р)=25р.</li>
 </ol>
 <h3 id="_5">Выплата купонов по облигациям</h3>
 <ol>
 <li>Про НКД рассказано в предыдущем разделе.</li>
-<li>Купоны по ОФЗ и муниципальным облигациям налогом не облагаются.</li>
+<li>Купоны по ОФЗ и муниципальным облигациям налогом не облагаются. <strong>С 1 января 2021г льгота отменена и будет НДФЛ 13%.</strong></li>
 <li>Купоны по российским корпоративным облигациям, выпущенным до 1 января 2017г, облагаются НДФЛ. Налог с купонной выплаты на брокерский счёт может удерживаться как в момент выплаты, так и в конце года, в зависимости от брокера и бумаги. Если купонная выплата идёт на банковский счёт — то всегда сразу в момент выплаты.</li>
-<li>Купоны по российским корпоративным облигациям, выпущенным после 1 января 2017г, не облагаются налогом, если номинальная доходность облигации меньше ключевой ставки ЦБ+5%. Сумма превышения облагается налогом в 35%. Т.е. если у корпоративной облигации номинальная стоимость 1000р и годовой купон меньше 115р ((6,5% КС ЦБ + 5%)×1000р), то налога нет. Если годовой купон, например, 130р, то налог в 35% будет начислен на сумму 130-115=15р и удержан в момент выплаты. При этом <em>не важно</em> за какую сумму вы купили облигацию. <strong>Никакие льготы и вычеты на этот налог не распространяются.</strong></li>
+<li>Купоны по российским корпоративным облигациям, выпущенным после 1 января 2017г, не облагаются налогом, если номинальная доходность облигации меньше ключевой ставки ЦБ+5%. Сумма превышения облагается налогом в 35%. Т.е. если у корпоративной облигации номинальная стоимость 1000р и годовой купон меньше 115р ((6,5% КС ЦБ + 5%)×1000р), то налога нет. Если годовой купон, например, 130р, то налог в 35% будет начислен на сумму 130-115=15р и удержан в момент выплаты. При этом <em>не важно</em> за какую сумму вы купили облигацию. <strong>Никакие льготы и вычеты на этот налог не распространяются.</strong>  <strong>С 1 января 2021г на все купоны будет НДФЛ 13% в общем порядке.</strong></li>
 <li>Предыдущий пункт не относится к НКД. Если вы купили бумагу номинальной стоимостью 1000р с годовым купоном 130р за 1000р + 120р НКД, а продали за 1000р + 130р НКД не дождавшись выплаты купона, то ваш налог ((1000+130)-(1000+120))×0,13 = 1,3р и на него можно получить вычет. А если вы дождались выплаты купона и только после продали облигацию за 1000р + 0р НКД, то у вас налог (130-115)*0,35=5,25р и 120р убытка, уменьшающих налоговую базу по другим операциям.</li>
 </ol>
 <h3 id="_6">Выплата дивидендов по акциям</h3>
